<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_domination_graph_recycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_small_margin_padding" />
    </HorizontalScrollView>

    <TextView
        android:id="@+id/fragment_domination_graph_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/two_dimensions_domination_graph" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/default_small_margin_padding"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_small_margin_padding"
        android:text="@string/solutions_text" />

    <LinearLayout
        android:layout_marginTop="@dimen/default_small_margin_padding"
        android:id="@+id/best_alternate_container"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/default_small_margin_padding"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/best_alternate"/>

        <RelativeLayout
            android:layout_marginLeft="@dimen/default_small_margin_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/item_alternate_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/left_brace"
                    android:textSize="@dimen/default_large_text_size" />

                <FrameLayout
                    android:layout_marginLeft="@dimen/default_smaller_margin_padding"
                    android:layout_width="@dimen/default_small_image_size_24"
                    android:layout_height="@dimen/default_small_image_size_24">

                    <ImageView
                        android:id="@+id/item_best_alternate_first_valuation_circle_image"
                        android:layout_width="@dimen/default_small_image_size_24"
                        android:layout_height="@dimen/default_small_image_size_24"
                        android:src="@drawable/circle" />

                    <TextView
                        android:id="@+id/item_best_alternate_first_valuation_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="k13"
                        android:textSize="@dimen/default_small_text_size" />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/separator" />

                <FrameLayout
                    android:layout_width="@dimen/default_small_image_size_24"
                    android:layout_height="@dimen/default_small_image_size_24"
                    android:layout_marginLeft="@dimen/default_smaller_margin_padding">

                    <ImageView
                        android:id="@+id/item_best_alternate_second_valuation_circle_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/circle" />

                    <TextView
                        android:id="@+id/item_best_alternate_second_valuation_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="k13"
                        android:textSize="@dimen/default_small_text_size" />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/default_smaller_margin_padding"
                    android:minHeight="10dp"
                    android:minWidth="10dp"
                    android:text="@string/right_brace"
                    android:textSize="@dimen/default_large_text_size" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/worst_alternate_container"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_marginTop="@dimen/default_small_margin_padding"
        android:layout_marginLeft="@dimen/default_small_margin_padding"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/worst_alternate"/>

        <RelativeLayout
            android:layout_marginLeft="@dimen/default_small_margin_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/left_brace"
                    android:textSize="@dimen/default_large_text_size" />

                <FrameLayout
                    android:layout_marginLeft="@dimen/default_smaller_margin_padding"
                    android:layout_width="@dimen/default_small_image_size_24"
                    android:layout_height="@dimen/default_small_image_size_24">

                    <ImageView
                        android:id="@+id/item_worst_alternate_first_valuation_circle_image"
                        android:layout_width="@dimen/default_small_image_size_24"
                        android:layout_height="@dimen/default_small_image_size_24"
                        android:src="@drawable/circle" />

                    <TextView
                        android:id="@+id/item_worst_alternate_first_valuation_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="k13"
                        android:textSize="@dimen/default_small_text_size" />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/separator" />

                <FrameLayout
                    android:layout_width="@dimen/default_small_image_size_24"
                    android:layout_height="@dimen/default_small_image_size_24"
                    android:layout_marginLeft="@dimen/default_smaller_margin_padding">

                    <ImageView
                        android:id="@+id/item_worst_alternate_second_valuation_circle_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/circle" />

                    <TextView
                        android:id="@+id/item_worst_alternate_second_valuation_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="k13"
                        android:textSize="@dimen/default_small_text_size" />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/default_smaller_margin_padding"
                    android:minHeight="10dp"
                    android:minWidth="10dp"
                    android:text="@string/right_brace"
                    android:textSize="@dimen/default_large_text_size" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_small_margin_padding"
        android:layout_marginTop="@dimen/default_small_margin_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/default_small_margin_padding"
            android:layout_marginTop="@dimen/default_small_margin_padding"
            android:text="@string/better_alternates_text"
            android:textSize="13sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_domination_graph_better_alternates_recycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_small_margin_padding"
        android:layout_marginTop="@dimen/default_small_margin_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/default_small_margin_padding"
            android:layout_marginTop="@dimen/default_small_margin_padding"
            android:text="@string/worse_alternates_text"
            android:textSize="13sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_domination_graph_worse_alternates_recycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_small_margin_padding"
        android:layout_marginTop="@dimen/default_small_margin_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/default_small_margin_padding"
            android:layout_marginTop="@dimen/default_small_margin_padding"
            android:text="@string/incomaprable_alternates"
            android:textSize="13sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_domination_graph_incomparable_alternates_recycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>